# tik_manager4

./: .flake8  .gitignore  README.md  RELEASE_NOTES.md  TODO.md  pyproject.toml  requirements-dev.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-test-linux.yml  ci-test-macos.yml  ci-test-maya.yml  ci-test-windows.yml  ci-test.yml  deploy.yml  pre-release-checks.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  developers_guide.rst  faq.rst  getting_started.rst  index.rst  installation.rst  overview.rst  quick_start_videos.rst  usage.rst  user_guide.rst
package/: make.bat  release_package.py  requirements.txt  tik_manager4_innosetup.iss  tik_manager4_innosetup_debug.iss
tests/: _test_objects.py  conftest.py  mockup.py  mockup_settings.json  scratch1.py  scratch2.py  scratching_head.py  stress_test.py  test_core.py  test_objects.py  test_objects1.py  test_project.py  test_ui.py  test_unit.py  test_user.py  ui_tests.py
tests/maya/: conftest.py  invoke.py  test_maya_project.py
tests/unit/: conftest.py  stress_test.py  test_project.py  test_user.py
tik_manager4/: __init__.py  _version.py  tik4.spec  tik4_debug.spec
tik_manager4/core/: cli.py  compatibility.py  constants.py  cryptor.py  entity.py  filelog.py  io.py  main.py  resolve.py  settings.py  utils.py
tik_manager4/dcc/: __init__.py  dcc_install.py  extension_core.py  extract_core.py  extract_template.py  ingest_core.py  main_core.py  max.py  maya.py  nuke.py  photoshop.py  template.py  validate_core.py
tik_manager4/defaults/: __init__.py  (+16 more)
(+385 files in other folders)
