[project]
name = "tik_manager4"
version = "4.3.7"
license = {file = "LICENSE"}
authors =[{name="Arda Kutlu", email="ardakutlu@gmail.com"},]
description="Multi Platform and Multi DCC Python based Pipeline Toolkit."
readme = "README.md"
requires-python = "> 3.10"
classifiers = [
"Development Status :: 3 - Production/Stable",
"Programming Language :: Python :: 3",
"License :: OSI Approved :: BSD License",
"Operating System :: OS Independent",]
dependencies = [
    "pyqt5",
]

[tool.setuptools]
packages = ["tik_manager4"]

[project.urls]
"Github" = "https://github.com/masqu3rad3/tik_manager4"
"Homepage" = "https://tik-manager.com"

[project.scripts]
tik_manager4 = "tik_manager4.objects:main"
